marcar favorite working provisionally

--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -43,7 +43,7 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h2 id="restaurant-name"></h2>
-      <p><label>Favorite<input type="checkbox" id="favourite_id" aria-label="Favorite"></label></p>
+      <span><label>Favorite<input type="checkbox" id="favorite_id" aria-label="Favorite"></label></span>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
