empezando de nuevo

--- a/app/index.html
+++ b/app/index.html
@@ -28,11 +28,11 @@
       <div class="filter-options" tabindex="0">
         <h2>Filter Results</h2>
         <label>Neighborhood:
-        <select id="neighborhoods-select" aria-label="Neighborhood" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select></label>
         <label>Cuisine:
-        <select id="cuisines-select" aria-label="Cuisines" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select></label>
       </div>
