--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -57,6 +57,24 @@
     <!-- Beginning reviews -->
     <section id="reviews-container" aria-label="Reviews">
       <ul id="reviews-list"></ul>
+      		<!-- Beginning Form submit review -->
+			<form id="submit-review-form-id">
+				<h3>Submit your review</h3>
+				<p><label for="name">Name:</label>
+				<input type="text" id="name-id" name="name" placeholder="Your Name." required/></p>
+				<p><label for="rating">Rating</label>
+				<select name="rating" id="rating-id">
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+				</select></p>
+				<p><label>Your review.</br><textarea rows="3" name="new-review" id="new-review-id" 
+				placeholder="Your review here." required></textarea></label></p>
+				<p><button type="button" onclick="submitReview()">Submit Review</button></p>
+			</form>
+		<!-- end Form submit review -->
     </section>
     <!-- End reviews -->
   </main>
