--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <title>Restaurant Info</title>
-</head>
+</head> 
 
 <body class="inside">
   <!-- Beginning header -->
@@ -43,11 +43,13 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h2 id="restaurant-name"></h2>
+      <!-- Beginning favorite -->
       <span role="checkbox" id="favorite2_id" aria-checked="false" aria-label="Favorite"
        tabindex="0" onkeydown="toggleCheckbox(event)" onclick="toggleCheckbox(event)"
        onfocus="focusCheckbox(event)" onblur="blurCheckbox(event)">
-    <span aria-hidden='true'>&#x2661;</span>
-  </span></br>
+       <span aria-hidden='true'>&#x2661;</span>
+      </span></br>
+  	   <!-- End Favorita -->
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
@@ -61,16 +63,16 @@
 			<form id="submit-review-form-id">
 				<h3>Submit your review</h3>
 				<p><label for="name">Name:</label>
-				<input type="text" id="name-id" name="name" placeholder="Your Name." required/></p>
+				<input type="text" id="name" name="name" placeholder="Your Name." required /></p>
 				<p><label for="rating">Rating</label>
-				<select name="rating" id="rating-id">
+				<select name="rating" id="rating">
 						<option value="1">1</option>
 						<option value="2">2</option>
 						<option value="3">3</option>
 						<option value="4">4</option>
 						<option value="5">5</option>
 				</select></p>
-				<p><label>Your review.</br><textarea rows="3" name="new-review" id="new-review-id" 
+				<p><label>Your review.</br><textarea rows="3" name="comments" id="comments" 
 				placeholder="Your review here." required></textarea></label></p>
 				<p><button type="button" onclick="submitReview()">Submit Review</button></p>
 			</form>
